--- a/docs/css/default.css
+++ b/docs/css/default.css
@@ -53,7 +53,7 @@ li.active a, #content li.active a {
 #body {
     position: relative;
     z-index: 1;
-    padding: 60px 60px 30px;
+    padding: 60px 60px 30px 0;
     overflow-x: hidden;
 }
 #scroll-screen {
@@ -77,8 +77,8 @@ li.active a, #content li.active a {
     -ms-overflow-style: none;
 }
 #sidebar .inner {
-    width: 270px;
-    padding: 25px 0 0 40px;    
+    width: 320px;
+    padding: 15px 0 0 10px;
 }
 #sidebar ul {
     list-style-type: none;
@@ -111,7 +111,7 @@ li.active a, #content li.active a {
 
 @media (max-width: 1366px) {
     #content {
-        margin-left: 220px;
+        margin-left: 320px;
     }
 }
 @media (max-width: 1024px) {
