--- a/docs/css/default.css
+++ b/docs/css/default.css
@@ -106,6 +106,11 @@ li.active a, #content li.active a {
     max-width: 800px !important;
 }
 
+pre.highlight {
+    background: #f8f8f8;
+    padding: 10px;
+}
+
 ::-webkit-scrollbar { width:7px; height:5px }
 ::-webkit-scrollbar-thumb { background-color:#ccc; }
 
