--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -81,7 +81,7 @@ if (/*screenWidth > 768 && */ pathinfo != "/")
     }
 }
 
-$(".sidebar-nav a[href^=http]")
+$("#sidebar a[href^=http]")
     .append('<i class="fa fa-external-link" style="margin-left:-15px"></i>');
 
 //Allow clicking on non-linked headers to jump to its #href
