hide #scroll-screen

--- a/docs/css/default.css
+++ b/docs/css/default.css
@@ -164,7 +164,7 @@ pre.highlight {
     #toc {
         display: block;
     }
-    #sidebar {
+    #sidebar, #scroll-screen {
         display: none;
     }
     #content {
