keep header fixed for easy nav to home page with TOC

--- a/docs/css/default.css
+++ b/docs/css/default.css
@@ -159,7 +159,7 @@ pre.highlight {
 }
 @media (max-width: 768px) {
     #topnav {
-        position: absolute;
+        background: #fff;
     }
     #toc {
         display: block;
