Add edit-github link

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -27,6 +27,7 @@
         </div>
     </nav>
     <div id="scroll-screen"></div>
+    <a id="edit-github" href="https://github.com/ServiceStack/docs/tree/master/docs/{{ page.path }}" target="_blank"><span class="fa fa-github"></span> Edit on GitHub</a>
     
     <div id="body">
 
