--- a/docs/css/default.css
+++ b/docs/css/default.css
@@ -48,7 +48,7 @@ h4 {
 a:hover {
     text-decoration: none;
 }
-li.active a, #content li.active a {
+#content li.active a {
     font-weight: bold;
 }
 #content .doc-links, #content .linq-links, #content .usecase-links {
@@ -79,7 +79,7 @@ li.active a, #content li.active a {
 #sidebar {
     position: fixed;
     z-index: 10;
-    top: 65px;
+    top: 63px;
     left: 0;
     bottom: 0;
     overflow-x: hidden;
@@ -89,7 +89,7 @@ li.active a, #content li.active a {
 }
 #sidebar .inner {
     width: 325px;
-    padding: 15px 0 0 10px;
+    padding: 10px 0 0 40px;
 }
 #sidebar ul {
     list-style-type: none;
@@ -106,11 +106,8 @@ li.active a, #content li.active a {
     background: #f8f8f8;
     border-left: .2em solid #3371e3;   
 }
-#sidebar li.active a {
-    font-weight: normal;
-}
 #sidebar li h5 {
-    margin: 0.8em 0;
+    margin: 0.6em 0;
     font-size: 18px;
 }
 
