--- a/docs/css/default.css
+++ b/docs/css/default.css
@@ -24,6 +24,12 @@ h3 {
 h4 {
     font-size: 1.4rem;
 }
+blockquote {
+    margin-bottom: 10px;
+    padding: 10px;
+    background-color: #FFF8DC;
+    border-left: 2px solid #ffeb8e;
+}
 
 .ref {
     color: #0277BD;
