move gists to sub folders

--- a/docs/_includes/validation/services/gist94751658.html
+++ b/docs/_includes/validation/services/gist94751658.html
@@ -88,7 +88,7 @@
       </tr>
       <tr>
         <td id="file-contactservices-cs-L20" class="blob-num js-line-number" data-line-number="20"></td>
-        <td id="file-contactservices-cs-LC20" class="blob-code blob-code-inner js-file-line">    <span class="pl-k">internal</span> <span class="pl-k">static</span> <span class="pl-k">readonly</span> <span class="pl-en">ConcurrentDictionary</span>&lt;<span class="pl-k">int</span>, <span class="pl-k">Data</span>.<span class="pl-en">Contact</span>&gt; <span class="pl-smi">Contacts</span> <span class="pl-k">=</span> <span class="pl-k">new</span> <span class="pl-en">ConcurrentDictionary</span>&lt;<span class="pl-k">int</span>, <span class="pl-k">Data</span>.<span class="pl-en">Contact</span>&gt;();</td>
+        <td id="file-contactservices-cs-LC20" class="blob-code blob-code-inner js-file-line">    <span class="pl-k">internal</span> <span class="pl-k">static</span> <span class="pl-en">ConcurrentDictionary</span>&lt;<span class="pl-k">int</span>, <span class="pl-k">Data</span>.<span class="pl-en">Contact</span>&gt; <span class="pl-smi">Contacts</span> <span class="pl-k">=</span> <span class="pl-k">new</span> <span class="pl-en">ConcurrentDictionary</span>&lt;<span class="pl-k">int</span>, <span class="pl-k">Data</span>.<span class="pl-en">Contact</span>&gt;();</td>
       </tr>
       <tr>
         <td id="file-contactservices-cs-L21" class="blob-num js-line-number" data-line-number="21"></td>
