--- a/docs/_includes/validation/server-jquery.html
+++ b/docs/_includes/validation/server-jquery.html
@@ -1,3 +1,4 @@
+{% raw %}
 <div id="gist94730189" class="gist">
     <div class="gist-file">
       <div class="gist-data">
@@ -283,3 +284,4 @@
       </div>
     </div>
 </div>
+{% endraw %}
