--- a/docs/_includes/validation/server-razor.html
+++ b/docs/_includes/validation/server-razor.html
@@ -1,3 +1,4 @@
+{% raw %}
 <div id="gist94730361" class="gist">
     <div class="gist-file">
       <div class="gist-data">
@@ -193,3 +194,4 @@
       </div>
     </div>
 </div>
+{% endraw %}
