--- a/docs/_includes/validation/server-sharp.html
+++ b/docs/_includes/validation/server-sharp.html
@@ -1,3 +1,4 @@
+{% raw %}
 <div id="gist94729979" class="gist">
     <div class="gist-file">
       <div class="gist-data">
@@ -125,3 +126,4 @@
       </div>
     </div>
 </div>
+{% endraw %}
