--- a/docs/_includes/validation/server-ts.html
+++ b/docs/_includes/validation/server-ts.html
@@ -1,3 +1,4 @@
+{% raw %}
 <div id="gist94730097" class="gist">
     <div class="gist-file">
       <div class="gist-data">
@@ -284,3 +285,4 @@
       </div>
     </div>
 </div>
+{% endraw %}
