--- a/docs/_includes/apply.md.html
+++ b/docs/_includes/apply.md.html
@@ -1,11 +1,11 @@
 <div id="gist95097254" class="gist">
-    <div class="gist-file">
-      <div class="gist-data">
-        <div class="js-gist-file-update-container js-task-list-container file-box">
-  <div id="file-apply-md" class="file">
-    
-  <div id="file-apply-md-readme" class="Box-body readme blob instapaper_body js-code-block-container">
-    <article class="markdown-body entry-content p-4" itemprop="text"><h2><a id="user-content-available-gists" class="anchor" aria-hidden="true" href="#available-gists"><svg class="octicon octicon-link" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Available Gists</h2>
+  <div class="gist-file">
+    <div class="gist-data">
+      <div class="js-gist-file-update-container js-task-list-container file-box">
+<div id="file-apply-md" class="file">
+  
+<div id="file-apply-md-readme" class="Box-body readme blob instapaper_body js-code-block-container">
+  <article class="markdown-body entry-content p-4" itemprop="text"><h2><a id="user-content-available-gists" class="anchor" aria-hidden="true" href="#available-gists"><svg class="octicon octicon-link" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Available Gists</h2>
 <h3><a id="user-content-projects" class="anchor" aria-hidden="true" href="#projects"><svg class="octicon octicon-link" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Projects</h3>
 <ul>
 <li><a href="https://gist.github.com/gistlyn/58030e271595520d87873c5df5e4c2eb">init</a> {to:'.'} <code>project</code> Empty .NET Core 2.2 ServiceStack App</li>
@@ -17,12 +17,17 @@
 <ul>
 <li><a href="https://gist.github.com/gistlyn/77924157a1fc79e33304e909e2f9e6a2">bootstrap-sharp</a> {to:'$HOST'} <code>ui,sharp</code> Bootstrap + Sharp Pages Starter Template</li>
 </ul>
+<h3><a id="user-content-data" class="anchor" aria-hidden="true" href="#data"><svg class="octicon octicon-link" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Data</h3>
+<ul>
+<li><a href="https://gist.github.com/gistlyn/7075e53e1fe69d3da12996677b5f3a5a">sqlserver</a> {to:'$HOST'} <code>db</code> Use OrmLite with SQL Server</li>
+<li><a href="https://gist.github.com/gistlyn/768d7b330b8c977f43310b954ceea668">sqlite</a> {to:'$HOST'} <code>db</code> Use OrmLite with SQLite</li>
+<li><a href="https://gist.github.com/gistlyn/faf62da8b8ef30849506631025a5d06c">postgres</a> {to:'$HOST'} <code>db</code> Use OrmLite with PostgreSQL</li>
+<li><a href="https://gist.github.com/gistlyn/2c3e17c98d20d7073be5f24cb16ab02e">mysql</a> {to:'$HOST'} <code>db</code> Use OrmLite with MySql</li>
+</ul>
 <h3><a id="user-content-auth" class="anchor" aria-hidden="true" href="#auth"><svg class="octicon octicon-link" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Auth</h3>
 <ul>
-<li><a href="https://gist.github.com/gistlyn/e22cd558e789a8b6424ba4fbac14de1d">auth-memory</a> {to:'$HOST'} <code>auth</code> AuthFeature configured with Memory Auth Repository and User Sessions</li>
-<li><a href="https://gist.github.com/gistlyn/18f5b4065f1d0c37f038f50632f4f903">auth-sqlserver</a> {to:'$HOST'} <code>auth</code> AuthFeature configured with SQL Server Auth Repository and User Sessions</li>
-<li><a href="https://gist.github.com/gistlyn/07b7b6ee54f49b93cec27a976cae8e2a">auth-sqlite</a> {to:'$HOST'} <code>auth</code> AuthFeature configured with SQLite Auth Repository and User Sessions</li>
-<li><a href="https://gist.github.com/gistlyn/63e96ad732c3dc6382fd677c309ded5d">auth-postgres</a> {to:'$HOST'} <code>auth</code> AuthFeature configured with PostreSQL Auth Repository and User Sessions</li>
+<li><a href="https://gist.github.com/gistlyn/13fe9f3f64a3cc66a0a2423b506798ca">auth-db</a> {to:'$HOST'} <code>auth</code> AuthFeature with OrmLite AuthRepository, CacheClient (requires ui,db)</li>
+<li><a href="https://gist.github.com/gistlyn/e22cd558e789a8b6424ba4fbac14de1d">auth-memory</a> {to:'$HOST'} <code>auth</code> AuthFeature with Memory Auth Repository and User Sessions (requires ui)</li>
 </ul>
 <h3><a id="user-content-examples" class="anchor" aria-hidden="true" href="#examples"><svg class="octicon octicon-link" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Examples</h3>
 <ul>
@@ -42,16 +47,16 @@
 <h3><a id="user-content-including-your-gists" class="anchor" aria-hidden="true" href="#including-your-gists"><svg class="octicon octicon-link" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Including your Gists</h3>
 <p>To include your gist in this directory and make it available to all <code>web</code> tool users please post a link to your gist with your preferred alias in the comments below. Your chosen <strong>alias</strong> and gist <strong>description</strong> will be shown in the <code>web +</code> output listing.</p>
 </article>
-  </div>
-
-  </div>
 </div>
 
-      </div>
-      <div class="gist-meta">
-        <a href="https://gist.github.com/gistlyn/f3fa8c016bbd253badc61d80afe399d9/raw/291a9d91867e4cec806c541b3b18ca25e2552a3f/apply.md" style="float:right">view raw</a>
-        <a href="https://gist.github.com/gistlyn/f3fa8c016bbd253badc61d80afe399d9#file-apply-md">apply.md</a>
-        hosted with ❤ by <a href="https://github.com">GitHub</a>
-      </div>
+</div>
+</div>
+
     </div>
+    <div class="gist-meta">
+      <a href="https://gist.github.com/gistlyn/f3fa8c016bbd253badc61d80afe399d9/raw/730403bbde32f2c72faea5c3d9d019bee108649a/apply.md" style="float:right">view raw</a>
+      <a href="https://gist.github.com/gistlyn/f3fa8c016bbd253badc61d80afe399d9#file-apply-md">apply.md</a>
+      hosted with ❤ by <a href="https://github.com">GitHub</a>
+    </div>
+  </div>
 </div>
