--- a/docs/_includes/apply.md.html
+++ b/docs/_includes/apply.md.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="https://github.githubassets.com/assets/gist-embed-a9a1cf2ca01efd362bfa52312712ae94.css">
+
 <div id="gist95097254" class="gist">
   <div class="gist-file">
     <div class="gist-data">
