--- a/docs/css/default.css
+++ b/docs/css/default.css
@@ -158,8 +158,13 @@ pre.highlight {
     font-size: 14px;
 }
 
-::-webkit-scrollbar { width:7px; height:5px }
-::-webkit-scrollbar-thumb { 
+#sidebar::-webkit-scrollbar
+{
+    width:10px; 
+    height:15px;
+}
+#sidebar::-webkit-scrollbar-thumb
+{
     background-color: #f8f8f8;
 }
 
