--- a/docs/_includes/netcore-livedemos.html
+++ b/docs/_includes/netcore-livedemos.html
@@ -102,7 +102,7 @@
 </tr>
 <tr>
     <td>
-        <a href="http://mvc.netcore.io">
+        <a href="https://mvc.netcore.io">
           <img src="https://raw.githubusercontent.com/ServiceStack/Assets/master/img/livedemos/mvc.png" width="350"/>
         </a>
     </td>
@@ -111,7 +111,7 @@
             <caption>.NET Core</caption>
             <tr>
               <td>Live Demo:</td>
-              <td><a href="http://mvc.netcore.io">mvc.netcore.io</a></td>
+              <td><a href="https://mvc.netcore.io">mvc.netcore.io</a></td>
             </tr>
             <tr>
               <td>Github:</td>
