--- a/docs/css/default.css
+++ b/docs/css/default.css
@@ -38,6 +38,11 @@ blockquote p {
     border-bottom: 1px solid rgba(0,0,0,0.15);
     margin-bottom: 20px;
 }
+code {
+    padding: .2em;
+    background-color: rgba(0,0,0,0.04);
+    border-radius: 3px;    
+}
 #content em {
     font-style: normal;
     line-height: 1.5em;
