--- a/docs/_includes/validation/contacts/client-react.html
+++ b/docs/_includes/validation/contacts/client-react.html
@@ -152,27 +152,6 @@
         <td id="file-index-html-L20" class="blob-num js-line-number" data-line-number="20"></td>
         <td id="file-index-html-LC20" class="blob-code blob-code-inner js-file-line">{{/capture}}</td>
       </tr>
-      <tr>
-        <td id="file-index-html-L21" class="blob-num js-line-number" data-line-number="21"></td>
-        <td id="file-index-html-LC21" class="blob-code blob-code-inner js-file-line">
-</td>
-      </tr>
-      <tr>
-        <td id="file-index-html-L22" class="blob-num js-line-number" data-line-number="22"></td>
-        <td id="file-index-html-LC22" class="blob-code blob-code-inner js-file-line">{{ 'showcode' | partial({</td>
-      </tr>
-      <tr>
-        <td id="file-index-html-L23" class="blob-num js-line-number" data-line-number="23"></td>
-        <td id="file-index-html-LC23" class="blob-code blob-code-inner js-file-line">    link: {'/client-react/login.html': 'https://github.com/NetCoreApps/Validation/blob/master/world/wwwroot/client-react/login.html'},</td>
-      </tr>
-      <tr>
-        <td id="file-index-html-L24" class="blob-num js-line-number" data-line-number="24"></td>
-        <td id="file-index-html-LC24" class="blob-code blob-code-inner js-file-line">    gist: 'https://gist.github.com/gistlyn/5d907238a308fc383cc879227c243fd3.js'</td>
-      </tr>
-      <tr>
-        <td id="file-index-html-L25" class="blob-num js-line-number" data-line-number="25"></td>
-        <td id="file-index-html-LC25" class="blob-code blob-code-inner js-file-line">}) }}</td>
-      </tr>
 </tbody></table>
 
 
@@ -211,7 +190,7 @@
       </tr>
       <tr>
         <td id="file-index-tsx-L4" class="blob-num js-line-number" data-line-number="4"></td>
-        <td id="file-index-tsx-LC4" class="blob-code blob-code-inner js-file-line"><span class="pl-k">import</span> { <span class="pl-smi">ErrorSummary</span>, <span class="pl-smi">Input</span>, <span class="pl-smi">CheckBox</span>, <span class="pl-smi">Select</span> } <span class="pl-k">from</span> <span class="pl-s"><span class="pl-pds">'</span>../controls<span class="pl-pds">'</span></span>;</td>
+        <td id="file-index-tsx-LC4" class="blob-code blob-code-inner js-file-line"><span class="pl-k">import</span> { <span class="pl-smi">ErrorSummary</span>, <span class="pl-smi">Input</span>, <span class="pl-smi">CheckBox</span>, <span class="pl-smi">Select</span> } <span class="pl-k">from</span> <span class="pl-s"><span class="pl-pds">'</span>@servicestack/react<span class="pl-pds">'</span></span>;</td>
       </tr>
       <tr>
         <td id="file-index-tsx-L5" class="blob-num js-line-number" data-line-number="5"></td>
