--- a/docs/_includes/validation/login/client-react.html
+++ b/docs/_includes/validation/login/client-react.html
@@ -88,7 +88,7 @@
       </tr>
       <tr>
         <td id="file-login-tsx-L5" class="blob-num js-line-number" data-line-number="5"></td>
-        <td id="file-login-tsx-LC5" class="blob-code blob-code-inner js-file-line"><span class="pl-k">import</span> { <span class="pl-smi">ErrorSummary</span>, <span class="pl-smi">Input</span>, <span class="pl-smi">CheckBox</span> } <span class="pl-k">from</span> <span class="pl-s"><span class="pl-pds">'</span>./controls<span class="pl-pds">'</span></span>;</td>
+        <td id="file-login-tsx-LC5" class="blob-code blob-code-inner js-file-line"><span class="pl-k">import</span> { <span class="pl-smi">ErrorSummary</span>, <span class="pl-smi">Input</span>, <span class="pl-smi">CheckBox</span> } <span class="pl-k">from</span> <span class="pl-s"><span class="pl-pds">'</span>@servicestack/react<span class="pl-pds">'</span></span>;</td>
       </tr>
       <tr>
         <td id="file-login-tsx-L6" class="blob-num js-line-number" data-line-number="6"></td>
