update links to NETFX apps

--- a/docs/_includes/netcore-livedemos.html
+++ b/docs/_includes/netcore-livedemos.html
@@ -33,7 +33,7 @@
             <caption>ASP.NET 4.5</caption>
             <tr>
               <td>Live Demo:</td>
-              <td><a href="http://redisgeo.servicestack.net">redisgeo.servicestack.net</a></td>
+              <td><a href="http://redisgeo.netcore.io">redisgeo.netcore.io</a></td>
             </tr>
             <tr>
               <td>Github:</td>
@@ -77,7 +77,7 @@
             <caption>ASP.NET 4.5</caption>
             <tr>
               <td>Live Demo:</td>
-              <td><a href="http://chat.servicestack.net">chat.servicestack.net</a></td>
+              <td><a href="http://chat.netcore.io">chat.netcore.io</a></td>
             </tr>
             <tr>
               <td>Github:</td>
@@ -166,7 +166,7 @@
             <caption>ASP.NET 4.5</caption>
             <tr>
               <td>Live Demo:</td>
-              <td><a href="http://stackapis.servicestack.net">stackapis.servicestack.net</a></td>
+              <td><a href="http://stackapis.netcore.io">stackapis.netcore.io</a></td>
             </tr>
             <tr>
               <td>Github:</td>
@@ -251,7 +251,7 @@
             <caption>ASP.NET 4.5</caption>
             <tr>
               <td>Live Demo:</td>
-              <td><a href="http://todos.servicestack.net">todos.servicestack.net</a></td>
+              <td><a href="http://todos.netcore.io">todos.netcore.io</a></td>
             </tr>
             <tr>
               <td>Github:</td>
@@ -337,7 +337,7 @@
             <caption>ASP.NET 4.5</caption>
             <tr>
               <td>Live Demo:</td>
-              <td><a href="http://restfiles.servicestack.net">restfiles.servicestack.net</a></td>
+              <td><a href="http://restfiles.netcore.io">restfiles.netcore.io</a></td>
             </tr>
             <tr>
               <td>Github:</td>
@@ -382,7 +382,7 @@
             <caption>ASP.NET 4.5</caption>
             <tr>
               <td>Live Demo:</td>
-              <td><a href="http://northwind.servicestack.net">northwind.servicestack.net</a></td>
+              <td><a href="http://northwind.netcore.io">northwind.netcore.io</a></td>
             </tr>
             <tr>
               <td>Github:</td>
@@ -424,7 +424,7 @@
             <caption>ASP.NET 4.5</caption>
             <tr>
               <td>Live Demo:</td>
-              <td><a href="http://redisstackoverflow.servicestack.net">redisstackoverflow.servicestack.net</a></td>
+              <td><a href="http://redisstackoverflow.netcore.io">redisstackoverflow.netcore.io</a></td>
             </tr>
             <tr>
               <td>Github:</td>
