Update htto docs links

--- a/docs/_includes/netcore-livedemos.html
+++ b/docs/_includes/netcore-livedemos.html
@@ -50,9 +50,9 @@
 <tr>
   <td colspan="2">
     <b>Features</b> - 
-    Real-time <a href="http://docs.servicestack.net/server-events.html">Server Events</a>
-    and <a href="http://docs.servicestack.net/javascript-server-events-client.html">JavaScript Client</a>,
-    Twitter, Facebook and Github <a href="http://docs.servicestack.net/authentication-and-authorization.html">OAuth Providers</a>
+    Real-time <a href="https://docs.servicestack.net/server-events.html">Server Events</a>
+    and <a href="https://docs.servicestack.net/javascript-server-events-client.html">JavaScript Client</a>,
+    Twitter, Facebook and Github <a href="https://docs.servicestack.net/authentication-and-authorization.html">OAuth Providers</a>
   </td>
 </tr>
 <tr>
@@ -94,10 +94,10 @@
 <tr>
   <td colspan="2">
     <b>Features</b> - 
-    Simple <a href="http://docs.servicestack.net/authentication-and-authorization.html">Auth and OAuth Providers</a>,
-    <a href="http://docs.servicestack.net/authentication-and-authorization.html#requiredrole-and-requiredpermission-attributes">Role-based Security</a>,
-    <a href="http://docs.servicestack.net/servicestack-integration.html">MVC Integration</a>,
-    <a href="http://docs.servicestack.net/ss-utils-js.html">ss-utils.js</a>
+    Simple <a href="https://docs.servicestack.net/authentication-and-authorization.html">Auth and OAuth Providers</a>,
+    <a href="https://docs.servicestack.net/authentication-and-authorization.html#requiredrole-and-requiredpermission-attributes">Role-based Security</a>,
+    <a href="https://docs.servicestack.net/servicestack-integration.html">MVC Integration</a>,
+    <a href="https://docs.servicestack.net/ss-utils-js.html">ss-utils.js</a>
   </td>
 </tr>
 <tr>
@@ -139,7 +139,7 @@
 <tr>
   <td colspan="2">
     <b>Features</b> - 
-    Fully-queryable <a href="http://docs.servicestack.net/autoquery-rdbms.html">RDBMS AutoQuery Services</a>,
+    Fully-queryable <a href="https://docs.servicestack.net/autoquery-rdbms.html">RDBMS AutoQuery Services</a>,
     <a href="https://github.com/ServiceStack/ServiceStack.OrmLite">OrmLite.Sqlite</a>,
     <a href="http://stackapis.netcore.io/ss_admin/autoquery/">AutoQuery Viewer</a>
   </td>
@@ -184,7 +184,7 @@
   <td colspan="2">
     <b>Features</b> - 
     File Uploads, 
-    <a href="http://docs.servicestack.net/http-utils.html">HTTP Utils</a>
+    <a href="https://docs.servicestack.net/http-utils.html">HTTP Utils</a>
   </td>
 </tr>
 <tr>
@@ -312,7 +312,7 @@
 <tr>
   <td colspan="2">
     <b>Features</b> - 
-    REST File Management and <a href="http://docs.servicestack.net/virtual-file-system.html">Virtual File System</a>
+    REST File Management and <a href="https://docs.servicestack.net/virtual-file-system.html">Virtual File System</a>
   </td>
 </tr>
 <tr>
@@ -354,10 +354,10 @@
 <tr>
   <td colspan="2">
     <b>Features</b> - 
-    <a href="http://docs.servicestack.net/autoquery-rdbms.html">RDBMS AutoQuery Services</a>,
+    <a href="https://docs.servicestack.net/autoquery-rdbms.html">RDBMS AutoQuery Services</a>,
     <a href="http://stackapis.netcore.io/ss_admin/autoquery/">AutoQuery Viewer</a>,
-    <a href="http://docs.servicestack.net/http-caching.html">HTTP Caching</a> and 
-    <a href="http://docs.servicestack.net/cacheresponse-attribute.html">CacheResponse attributes</a>
+    <a href="https://docs.servicestack.net/http-caching.html">HTTP Caching</a> and 
+    <a href="https://docs.servicestack.net/cacheresponse-attribute.html">CacheResponse attributes</a>
   </td>
 </tr>
 <tr>
