--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -16,7 +16,7 @@
 
     <nav id="topnav" class="navbar navbar-light bg-faded">
         <a title="ServiceStack Documentation" class="navbar-brand" href="/" style="width:220px;">
-            <img src="/images/logo-32.png" width="42" height="32" class="d-inline-block align-top" alt="" style="float:left;margin:0 10px 0 0">
+            <img src="/images/svg/servicestack.svg" width="42" height="32" class="d-inline-block align-top" alt="" style="float:left;margin:0 10px 0 0">
             <h3>Documentation</h3>
         </a>
 
