--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -16,8 +16,8 @@
 
     <nav id="topnav" class="navbar navbar-light bg-faded">
         <a title="ServiceStack Documentation" class="navbar-brand" href="/" style="width:220px;">
-            <img src="/images/svg/servicestack.svg" width="42" height="32" class="d-inline-block align-top" alt="" style="float:left;margin:0 10px 0 0">
-            <h3>Documentation</h3>
+            <img src="/images/svg/servicestack.svg" height="36" class="d-inline-block" alt="ServiceStack Logo" style="float:left;margin:0px 7px 0 0;">
+            <h3 style="line-height:36px;">Documentation</h3>
         </a>
 
         <button id="sidebar-toggle" class="navbar-toggler" type="button">
