--- a/docs/css/default.css
+++ b/docs/css/default.css
@@ -187,6 +187,7 @@ pre.highlight {
     background: no-repeat url(/images/youtube-play-hover.png);
     opacity: 1;
     background-color: rgba(255,255,255,.2);
+    cursor: pointer;
 }
 
 
