--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -133,11 +133,10 @@ function bindYouTubePlay(img) {
 function bindYouTubeImages() {
     preloadImage('/images/youtube-play-hover.png');
     $("a[href^='https://youtu.be/']>img").each(function() {
-        var img = $(this);
-        if (img.complete) {
-            bindYouTubePlay(img);
+        if (this.complete) {
+            bindYouTubePlay($(this));
         } else {
-            img.onload = function() { bindYouTubePlay($(this)); }
+            this.onload = function() { bindYouTubePlay($(this)); }
         }
     });
 }
