preserve youtube query string

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -96,8 +96,8 @@ $("h2,h3,h4").click(function(){
 function video(url) {
     return '<iframe style="width:100%;min-height:585px" src="' + url + '" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>';
 }
-function playVideo(el,id) {
-    var url = 'https://www.youtube.com/embed/' + id + '?autoplay=1';
+function playVideo(el,id,qs) {
+    var url = 'https://www.youtube.com/embed/' + id + '?autoplay=1' + (qs ? '&' + qs : '');
     $(el).parent().html(video(url));
 }
 
@@ -122,10 +122,12 @@ function bindYouTubePlay(img) {
     var a = img.parent();
     var p = a.parent();
     if (p[0] && p[0].tagName === 'P') {
-        var id = splitOnFirst(splitOnLast(a.attr('href'),'/')[1],'?')[0];
+        var parts = splitOnFirst(splitOnLast(a.attr('href'),'/')[1],'?');
+        var id = parts[0];
+        var qs = parts[1] || '';
         var width = Math.floor(img[0].offsetWidth/2 - 43);
         var height = Math.floor(img[0].offsetHeight/2 - 31);
-        var html = `<i class="youtube-play" style="width:${img[0].offsetWidth}px;height:${img[0].offsetHeight}px;background-position:${width}px ${height}px" onclick="playVideo(this,'${id}')"></i>`;
+        var html = `<i class="youtube-play" style="width:${img[0].offsetWidth}px;height:${img[0].offsetHeight}px;background-position:${width}px ${height}px" onclick="playVideo(this,'${id}','${qs}')"></i>`;
         p.prepend(html);
     }
 }
